WIP
* Fix cast error in LazyDocCommentTableProcessor
* Add missing methid getType to AsciiDocTrees
* Ad opens to ITs